[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="WeatherIcon" type="TextureRect" parent="."]
margin_left = 280.0
margin_top = 140.0
margin_right = 281.0
margin_bottom = 140.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="LabelMaxTemperature" type="Label" parent="."]
modulate = Color( 0.94902, 0.94902, 0.94902, 1 )
margin_left = 384.0
margin_top = 530.0
margin_right = 512.0
margin_bottom = 544.0
text = "Max Temperature"
align = 1
valign = 1

[node name="LabelMinTemperature" type="Label" parent="."]
modulate = Color( 0.94902, 0.94902, 0.94902, 1 )
margin_left = 256.0
margin_top = 530.0
margin_right = 384.0
margin_bottom = 544.0
text = "Min Temperature"
align = 1
valign = 1

[node name="LabelCityName" type="Label" parent="."]
modulate = Color( 0.94902, 0.94902, 0.94902, 1 )
margin_right = 1024.0
margin_bottom = 24.0
text = "City"
align = 1
valign = 1

[node name="LabelHumidity" type="Label" parent="."]
modulate = Color( 0.94902, 0.94902, 0.94902, 1 )
margin_left = 640.0
margin_top = 530.0
margin_right = 768.0
margin_bottom = 544.0
text = "Humidity"
align = 1
valign = 1

[node name="LabelPrecipitation" type="Label" parent="."]
modulate = Color( 0.94902, 0.94902, 0.94902, 1 )
margin_left = 512.0
margin_top = 530.0
margin_right = 640.0
margin_bottom = 544.0
text = "Precipitation"
align = 1
valign = 1

[node name="LabelTemperature" type="Label" parent="."]
modulate = Color( 0.94902, 0.94902, 0.94902, 1 )
margin_left = 556.0
margin_top = 240.0
margin_right = 638.0
margin_bottom = 256.0
text = "Temperature"
align = 1
valign = 1

[node name="wallpaper" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = -2

[node name="umbrella" type="TextureRect" parent="."]
margin_left = 550.0
margin_top = 470.0
margin_right = 590.0
margin_bottom = 510.0
rect_scale = Vector2( 0.1, 0.1 )

[node name="water" type="TextureRect" parent="."]
margin_left = 678.0
margin_top = 470.0
margin_right = 718.0
margin_bottom = 510.0
rect_scale = Vector2( 0.1, 0.1 )

[node name="LabelWeather" type="Label" parent="."]
margin_left = 556.0
margin_top = 180.0
margin_right = 1024.0
margin_bottom = 194.0
text = "Temps"
valign = 1

[node name="maxArrow" type="TextureRect" parent="."]
margin_left = 422.0
margin_top = 470.0
margin_right = 462.0
margin_bottom = 510.0
rect_scale = Vector2( 0.1, 0.1 )

[node name="minArrow" type="TextureRect" parent="."]
margin_left = 294.0
margin_top = 470.0
margin_right = 334.0
margin_bottom = 510.0
rect_scale = Vector2( 0.1, 0.1 )

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
